# job-buddy

./: .env.example  .gitignore  AGENTS.md  CLAUDE.md  README.md  docker-compose.yml
.agent-harness/: README.md  browser-validation.md
.agent-harness/goals/: _template.md  interview-question-generation-review.md
.agent-harness/scripts/: check_flyway_migrations.py  doctor.sh  evaluate.sh  gate.sh  pre-commit-hook.sh  verify.sh
.agent-harness/tests/: test_check_flyway_migrations.py  test_start_all.py  test_stop_all.py
.github/workflows/: quality-gate.yml
agent-backend/: pom.xml
agent-doc/: README.md
agent-doc/业务能力/: Boss直聘集成与岗位检索.md  岗位分析与收藏管理.md  工作台认证与会话管理.md  求职旅程与投递管理.md  简历管理、画像与分析.md  面试题库与模拟练习.md  项目深挖与材料管理.md
agent-doc/工具体系/: README.md
agent-doc/工程规范/: AI协作开发与质量验证规范.md  Java代码注释与OpenAPI文档规范.md
agent-doc/开发文档/: Agent核心逻辑迁移与Runtime职责边界方案.md  Boss直聘取数引擎迁移至boss-cli方案.md  agent-intent接入对话主链路方案.md  agent-intent澄清门与Transcript复核方案.md  agent-memory混合检索接入向量召回方案.md  对话主链路单流路由与理解往返消除方案.md  岗位搜索分页换一批与薪资过滤优化方案.md  工作台问答Token流式输出方案.md  扫码登录续跑与换一批即时检索性能优化方案.md  简历互导联动与岗位选中分析方案.md  题库与模拟练习整合方案.md
agent-doc/开发理念/: README.md
agent-doc/核心链路/: README.md
agent-eval/: pyproject.toml
agent-frontend/: Dockerfile  README.md  eslint.config.js  index.html  package-lock.json  package.json  vite.config.js  vitest.config.js
agent-intent/: Dockerfile  README.md  pyproject.toml  server.py
agent-intent/app/: __init__.py  api.py  clarification.py  llm_classifier.py  models.py  scorer.py  service.py  transcript_review.py
agent-intent/app/domains/: job.py
agent-intent/tests/: test_clarification_gate.py  test_job_domain.py  test_service.py  test_transcript_review.py
agent-memory/: README.md  pyproject.toml
agent-memory/app/: api.py  embedding.py  relevance.py  store.py
agent-memory/tests/: test_embedding.py  test_memory_api.py  test_relevance.py  test_store.py
agent-runtime/: .dockerignore  .gitignore  Dockerfile  README.md  main.py  pyproject.toml  server.py
agent-runtime/app/: server.py
agent-runtime/app/api/: health.py  runtime.py
agent-runtime/app/core/agent/: executor.py  graph.py
agent-runtime/app/core/capability/: models.py
agent-runtime/app/core/checkpoint/: store.py
agent-runtime/app/core/common/: constants.py  settings.py
agent-runtime/app/core/context/: assembler.py  compactor.py
agent-runtime/app/core/intent/: task_understanding.py
agent-runtime/app/core/llm/: openai_client.py
agent-runtime/app/core/memory/: client.py
agent-runtime/app/core/observability/: trace.py
agent-runtime/app/core/planner/: planner.py
agent-runtime/app/core/security/: redaction.py  transcript_review.py
agent-runtime/app/core/tool/: base.py  gateway.py  injection_probe.py  mcp_adapter.py  mcp_client.py  permission.py  registry.py  runtime.py  search.py
agent-runtime/app/core/utils/: time_utils.py
agent-runtime/app/models/: schemas.py  state.py
agent-runtime/app/tools_builtin/: __init__.py  boss_browser_tool.py  echo_tool.py  file_edit_tool.py  file_read_tool.py  file_write_tool.py  interview_tools.py  resume_tools.py  search_tools.py  shell_tool.py  web_fetch_tool.py  web_search_tool.py
agent-runtime/config/: config.yaml
agent-runtime/config/profiles/: job-buddy.yaml
agent-runtime/config/prompts/artifacts/: interview_question_generation.md
agent-runtime/tests/: conftest.py  test_agent_executor.py  test_api_runtime.py  test_boss_browser_tool.py  test_builtin_tools.py  test_checkpoint_and_trace.py  test_context_assembler.py  test_context_compactor.py  test_injection_probe.py  test_interview_tools.py  test_job_buddy_router.py  test_llm_cache.py  test_loop_controller.py  test_mcp_adapter.py  test_memory_client.py  test_observability_enrichment.py  test_planner_fallback.py  test_resume_tools.py  test_runtime.py  test_runtime_delivery_contract.py  test_runtime_remediation.py  test_settings.py  test_task_understanding_profile.py  test_tool_gateway.py  test_tool_permission.py  test_tool_registry.py  test_tool_runtime.py  test_tool_search.py  test_web_fetch_security.py  test_web_search_tool.py  test_workflow_registry.py
agent-sandbox/: pyproject.toml  server.py
agent-sandbox/app/: internal_auth.py
agent-sandbox/app/server/: app.py
agent-sandbox/examples/: run_anything.py
agent-sandbox/tests/: conftest.py  test_client.py  test_internal_auth.py  test_runtime_general.py  test_server.py
agent-tool/: README.md  pyproject.toml
agent-tool/app/: registry.py  server.py
agent-tool/app/tools/boss_browser/: tool.py
agent-tool/app/tools/boss_browser/config/: config.yaml
agent-tool/app/tools/boss_browser/core/: boss_cli_engine.py  extract.py  qr_session_codec.py  rate_limiter.py  service.py  settings.py
agent-tool/tests/: test_boss_auth_degraded.py  test_boss_backstop_auth_recovery.py  test_boss_browser_tool.py  test_boss_cli_engine.py  test_boss_extract.py  test_boss_service_cli_failure.py  test_boss_settings.py  test_boss_tool_event_loop.py  test_registry.py  test_tools.py
scripts/: format-code.sh  start-all.sh  stop-all.sh  sync-env.py
(+342 files in other folders)
