[project]
name = "job-buddy-runtime"
version = "0.1.0"
description = "LangGraph-based Agent Runtime for Job Buddy tool体系"
requires-python = "==3.10.16"
dependencies = [
    "fastapi>=0.125.0",
    "uvicorn[standard]>=0.24.0,<0.25.0",
    "pydantic>=2.5.0,<3.0.0",
    "pydantic-settings>=2.4.0,<3.0.0",
    "loguru>=0.7.2",
    "langgraph>=0.0.40,<0.1.0",
    "httpx>=0.25.0,<0.28.0",
    "orjson>=3.10.0",
    "pyyaml>=6.0.1",
    "mcp>=1.2.0",
    "pypdf>=4.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0,<8.0.0",
    "pytest-asyncio>=0.21.0,<0.22.0",
    "ruff>=0.1.0"
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]

[tool.ruff]
line-length = 120
target-version = "py310"

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
