[project]
name = "job-buddy-sandbox"
version = "1.0.0"
description = "Service-mode Python wrapper for Anthropic Sandbox Runtime with generic command and code execution"
readme = "README.md"
requires-python = ">=3.10"
authors = [
    { name = "Job Buddy" }
]
dependencies = [
    "fastapi>=0.110.0,<1.0.0",
    "uvicorn[standard]>=0.27.0,<1.0.0",
    "pydantic>=2.5.0,<3.0.0",
    "loguru>=0.7.2,<1.0.0",
    "httpx>=0.25.0,<0.29.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0,<8.0.0",
    "ruff>=0.15.0,<1.0.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]

[tool.ruff]
line-length = 120
target-version = "py310"

[tool.ruff.lint]
extend-select = ["I", "B904", "B905"]

[tool.ruff.format]
line-ending = "lf"

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
addopts = "-q"
