[project]
name = "agent-tool"
version = "1.0.0"
description = "Production tool registry and execution service for Job Buddy"
requires-python = ">=3.10"
dependencies = [
    "fastapi>=0.110.0,<1.0.0",
    "uvicorn[standard]>=0.27.0,<1.0.0",
    "pydantic>=2.5.0,<3.0.0",
    "httpx>=0.27.0,<0.29.0",
    "loguru>=0.7.0,<1.0.0",
    "pyyaml>=6.0.1,<7.0.0",
    "qrcode[pil]>=7.4.2,<9.0.0",
    "kabi-boss-cli>=0.3.6,<1.0.0",
    "playwright>=1.40.0,<2.0.0",
    "redis>=5.2.0,<6.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0,<8.0.0",
    "ruff>=0.15.0,<1.0.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]

[tool.ruff]
line-length = 120
target-version = "py310"

[tool.ruff.lint]
extend-select = ["I", "B904", "B905"]

[tool.ruff.format]
line-ending = "lf"

[tool.pytest.ini_options]
testpaths = ["tests"]
